steps 1 and 2 good

--- a/1_Filtering and processing location data.html
+++ b/1_Filtering and processing location data.html
@@ -307,6 +307,10 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </div>
 <p>Otherwise, you can continue with step 2 without saving.</p>
 </section>
+<section id="continue-data-analysis" class="level2">
+<h2 class="anchored" data-anchor-id="continue-data-analysis">Continue data analysis</h2>
+<p>Continue into step 2 directly. If R is closed prior to Step 2, Step 1 will need to be run again.</p>
+</section>
 </section>
 
 </main>
